--- a/手把手实现出海网站收款全流程/3、申请美国银行卡.md
+++ b/手把手实现出海网站收款全流程/3、申请美国银行卡.md
@@ -1,11 +1,13 @@
 # 申请美国银行卡
 
 ## 1. 为什么要申请美国商业银行卡？
+
 - 激活 Stripe 要求是商业银行卡，不建议使用个人银行卡。
 - 分离个人和商业财务，可以规避一些税收等问题。
 - 还有其他好处，请自行 Google。
 
 ## 2. 选择开通银行卡的机构
+
 对于出海同学来说，可能听到最多的是“水星银行”了，“水星银行”其实不是银行，是一家靠谱的金融机构，水星的卡特别适合小团队和个人公司，便捷且费用低。
 
 但是现在水星银行对国内的用户好像越来越严格了，我申请了两次，都没有通过，邮件询问官方，也没有给出具体原因，资料都是按照要求提交的。
@@ -13,13 +15,16 @@
 后来，我放弃了申请水星银行。了解到“空中云汇”也可以开通美国商业银行卡，于是就去申请了。
 
 ## 3. 开通“空中云汇”的美国商业银行卡
+
 > 请注意，如果需要开通“空中云汇”的支付功能的话，请一定要申请英国或香港公司，或者申请之前跟官方人员沟通一下。
 
 ### （1）地址
+
 👉 [Airwallex 空中云汇](https://www.airwallex.com/cn/signup)
 
 ### （2）开通流程
-<img src="../public/airwallex-signup.PNG" width="257px" height="461px" alt="注册空中云汇">
+
+![注册空中云汇](../public/airwallex-signup.PNG)
 
 ① 注册公司所属国家：美国
 
@@ -33,20 +38,20 @@
 
 ---
 
-<img src="../public/creat-airwallex-account.PNG" width="422px" height="464px" alt="创建空中云汇账号">
+![创建空中云汇账号](../public/creat-airwallex-account.PNG)
 
 选择开通“空中云汇”的用途，一般情况下，选择「收单、接收转账、多币种换汇」这 3 个就够了。
 
 ---
 
-<img src="../public/airwallex-checkout.PNG" width="508px" height="308px" alt="创建空中云汇账号">
+![创建空中云汇账号](../public/airwallex-checkout.PNG)
 
 ① **验证邮箱**：比较简单，点击进去，然后去验证就行了。
 
 ② **激活账户**：这一步有一些繁琐，一共分为 10 个小模块，需要填写的信息比较多，下面来一一介绍。
 
 ---
-<img src="../public/business-details.png" width="489px" height="638px" alt="注册公司信息明细-企业详情">
+![注册公司信息明细-企业详情](../public/business-details.png)
 
 ① **Entity（实体类型）**：选择「Company」。
 
@@ -59,42 +64,42 @@
 ⑤、⑥、⑦ 很简单，填写地址对应的城市，省/市和对应的邮政编码即可。
 
 ---
-<img src="../public/business-document.png" width="496px" height="282px" alt="公司注册证明文档">
+![公司注册证明文档](../public/business-document.png)
 
 ① 这一步就是需要上传 [海外公司注册](./1、海外公司注册.md) 里的公司注册文件，下载下来，上传即可。
 
 ---
-<img src="../public/industry.png" width="503px" height="276px" alt="公司主营的行业">
+![公司主营的行业](../public/industry.png)
 
 ① 选择你的公司主要经营的行业，根据自己主营的行业来选择就行。
 
 ---
-<img src="../public/products-or-services.png" width="492px" height="266px" alt="公司经营的产品或服务">
+![公司经营的产品或服务](../public/products-or-services.png)
 
 ① 这里填写你的公司产品或服务描述，按照实际情况填写就行，按照例子的写法，简单清晰明了即可。
 
 ---
-<img src="../public/website.png" width="498px" height="285px" alt="添加您的网站">
+![添加您的网站](../public/website.png)
 
 ① 填写你的网站地址，注意是已上线的网站，可以是自己公司官网，网站不要过于简陋，像个正常的网站，最好是跟自己前面填写的业务相关。也可以是电子商务平台上的在线商店、应用商店下载链接和社交媒体资料。可以添加多个网站，毕竟是人工审核，资料越详细越真实，就越容易通过。
 
 ---
-<img src="../public/monthly-revenue.png" width="498px" height="397px" alt="填写您的月收入或营业额">
+![填写您的月收入或营业额](../public/monthly-revenue.png)
 
 ① 选择你的公司产品或者服务的月收入或者营业额，如果还没有收入，选择第一个最少的那个就行了。
 
 ---
-<img src="../public/business-location.png" width="501px" height="292px" alt="填写您开展业务的地点">
+![填写您开展业务的地点](../public/business-location.png)
 
 ① 选择你的业务开展的地区，最多选择 5 个地区，如果是面向全球的业务，选择几个主要国家即可。
 
 ---
-<img src="../public/list-of-business-owners.png" width="309px" height="319px" alt="公司所有者列表">
+![公司所有者列表](../public/list-of-business-owners.png)
 
 ① 填写你的公司实际控制人，一人公司就填写自己的名字，如果还有合伙人，继续添加即可。
 
 ---
-<img src="../public/applicant-identity.png" width="460px" height="962px" alt="申请人信息验证">
+![申请人信息验证](../public/applicant-identity.png)
 
 > 这里填写的是申请人的信息。作为申请人，我们还需要完成在线实时身份确认步骤。点击 “Submit” 后，系统会引导我们上传身份证复印件，并通过简单的视频互动来验证我们的身份。
 
@@ -107,11 +112,12 @@
 ⑮ 点击「Submit」提交之后，会跳转到在线身份验证部分，按照提示进行操作验证即可，比较简单。
 
 ---
-<img src="../public/airwallex-register-end.png" width="461px" height="300px" alt="空中云汇注册完成，等待激活">
+![空中云汇注册完成，等待激活](../public/airwallex-register-end.png)
 
 上面的信息填写完成之后，我们就可以看到“激活账户”变成「审核中」状态了。
 
 ## 3. 说在最后
+
 再啰嗦一下，如果需要“空中云汇”的支付功能，那么请注册英国或香港公司，美国公司几乎行不通（除非你有美国籍），这是我跟官方沟通过的结果。
 
 不过，我们一般也不用“空中云汇”的支付功能，能开通美国银行来收款就可以了，支付功能我们直接激活 Stripe 就行。
@@ -120,7 +126,7 @@
 
 我们当时没有沟通清楚，我以为美国公司不能开通“空中云汇”了，正准备去找其他替代方案了呢，结果过了几天之后，收到短信，账号开通成功了。
 
-<img src="../public/airwallex-success.jpg" width="276px" height="153px" alt="空中云汇账号开通成功短信">
+![空中云汇账号开通成功短信](../public/airwallex-success.jpg)
 
 然后，我们登录“空中云汇”网站，去后台开通选择和开通美国商业银行卡就可以了。
 
